# Tyche

./: .env.example  .gitattributes  .gitignore  data.dvc  pyproject.toml
.dvc/: config
notebooks/: news_sentiment_analysis.ipynb
tyche/: __init__.py
tyche/common/: __init__.py  config.py  device.py  hf_loading.py  logging.py
tyche/news/: __init__.py  graph.py  records.py  sentiment_pipeline.py  state.py
tyche/news/agents/: __init__.py  aggregator.py  auditor.py  deduplicator.py  ingest.py  neutralizer.py  scorer.py  segmentation.py  summarizer.py
tyche/news/service/: __init__.py  embedder.py
