[project]
name = "tyche"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.116.0",
    "dask[dataframe]>=2026.7.0",
    "dvc[s3]>=3.67.1",
    "langchain>=1.3.13",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.7.0",
    "torch>=2.13.0",
    "transformers>=5.13.1",
]

[dependency-groups]
dev = [
    "hypothesis>=6.156.6",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
